networking/firewall
# Generated by iptables-save v1.8.3 on Thu Dec 24 13:33:09 2020
*mangle
:PREROUTING ACCEPT [327094879:283783866377]
:INPUT ACCEPT [642140:256922793]
:FORWARD ACCEPT [326439232:283526112306]
:OUTPUT ACCEPT [173415:132848263]
:POSTROUTING ACCEPT [326520142:283653410265]
:LIBVIRT_PRT - [0:0]
-A POSTROUTING -j LIBVIRT_PRT
-A LIBVIRT_PRT -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Dec 24 13:33:09 2020
# Generated by iptables-save v1.8.3 on Thu Dec 24 13:33:09 2020
*nat
:PREROUTING ACCEPT [3206706:410181762]
:INPUT ACCEPT [24086:8452396]
:OUTPUT ACCEPT [27627:1687693]
:POSTROUTING ACCEPT [1222759:84187442]
-A PREROUTING -i enp5s0 -p udp -m udp --dport 1194 -m comment --comment "openvpn from internet to wall" -j DNAT --to-destination 10.5.0.63:1194
#-A PREROUTING -i enp5s0 -p tcp -m tcp --dport 80 -m comment --comment "from internet to http" -j DNAT --to-destination 192.168.130.20:80
#-A PREROUTING -i enp5s0 -p tcp -m tcp --dport 443 -m comment --comment "from internet to https nextcloud" -j DNAT --to-destination 192.168.130.20:443
-A PREROUTING -i enp5s0 -p tcp -m tcp --dport 80 -m comment --comment "from internet to http" -j DNAT --to-destination 10.5.0.65:80
-A PREROUTING -i enp5s0 -p tcp -m tcp --dport 443 -m comment --comment "from internet to https nextcloud" -j DNAT --to-destination 10.5.0.65:443
-A POSTROUTING -o enp5s0 -j MASQUERADE
#-A POSTROUTING -d 10.5.0.63/32 -o enp6s0 -p udp -m udp --dport 1194 -m comment --comment "to openvpn sourced as local" -j SNAT --to-source 10.5.0.10
-A POSTROUTING -o tun0 -j MASQUERADE
COMMIT
# Completed on Thu Dec 24 13:33:09 2020
# Generated by iptables-save v1.8.3 on Thu Dec 24 13:33:09 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [12500876:7426923655]
:OUTPUT ACCEPT [173415:132848263]
:LOGGING - [0:0]
:internet_to_lan - [0:0]
:internet_to_vms - [0:0]
:k8s_to_lan - [0:0]
:kvmpri_to_lan - [0:0]
:kvmpub_to_lan - [0:0]
:lan_to_internet - [0:0]
:lan_to_k8s - [0:0]
:lan_to_kvmpri - [0:0]
:lan_to_kvmpub - [0:0]
:lan_to_vms - [0:0]
:vms_to_internet - [0:0]
:vms_to_lan - [0:0]
:vpn_to_lan - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.5.0.143/32 -j ACCEPT
-A INPUT -s 192.168.60.0/24 -p icmp -m comment --comment "ping from VMs" -j ACCEPT
-A INPUT -s 192.168.130.0/24 -p icmp -m comment --comment "ping from priv KVMs" -j ACCEPT
-A INPUT -s 10.5.0.0/24 -p tcp -m tcp --dport 80 -m comment --comment "lan to HTTP" -j ACCEPT
-A INPUT -s 10.5.0.200/32 -p tcp -m tcp --dport 10050 -m comment --comment "zabbix server to agent" -j ACCEPT
-A INPUT -s 192.168.130.22/32 -p tcp -m tcp --dport 10050 -m comment --comment "devops zabbix server to agent" -j ACCEPT
-A INPUT -s 10.5.0.0/24 -p udp -m udp -m multiport --dports 67,68 -m comment --comment "dhcp connection for LAN" -j ACCEPT
-A INPUT -s 10.5.0.0/24 -p tcp -m tcp --dport 22 -m comment --comment "ssh access to worf from lan" -j ACCEPT
-A INPUT -s 192.168.0.211/32 -p tcp -m tcp --dport 22 -m comment --comment "ssh from DMZ - only morty" -j ACCEPT
-A INPUT -s 10.8.0.6/32 -p tcp -m tcp --dport 22 -m comment --comment "morty ssh from VPN" -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -m comment --comment "re-entrant connections" -j ACCEPT
-A INPUT -j LOGGING
-A FORWARD -i enp5s0 -o enp6s0 -d 10.5.0.63 -j ACCEPT -m comment --comment "OpenVPN from world to vpn01"
-A FORWARD -i enp5s0 -o enp6s0 -d 10.5.0.65 -j ACCEPT -m comment --comment "Nextcloud from world to nextcloud01"
-A FORWARD -i enp5s0 -o enp6s0 -j internet_to_lan
-A FORWARD -i enp5s0 -o vboxnet0 -j internet_to_vms
-A FORWARD -i enp6s0 -o vboxnet0 -j lan_to_vms
-A FORWARD -i enp6s0 -o enp5s0 -j lan_to_internet
-A FORWARD -i enp6s0 -o virbr0 -j lan_to_kvmpub
-A FORWARD -i enp6s0 -o virbr1 -j lan_to_kvmpri
-A FORWARD -i vboxnet0 -o enp5s0 -j vms_to_internet
-A FORWARD -i vboxnet0 -o enp6s0 -j vms_to_lan
-A FORWARD -s 192.168.100.0/24 -j k8s_to_lan
-A FORWARD -i virbr0 -o enp6s0 -j kvmpub_to_lan
-A FORWARD -i virbr1 -o enp6s0 -j kvmpri_to_lan
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables-Dropped: "
-A LOGGING -j DROP
-A internet_to_lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A internet_to_lan -j DROP
-A internet_to_vms -m state --state RELATED,ESTABLISHED -j ACCEPT
-A internet_to_vms -j LOGGING
-A k8s_to_lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A k8s_to_lan -d 10.5.0.200/32 -p udp -m udp --dport 53 -m comment --comment "K8S access to DNS server" -j ACCEPT
-A k8s_to_lan -j LOGGING
-A kvmpri_to_lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A kvmpri_to_lan -d 10.5.0.200/32 -p udp -m udp --dport 53 -m comment --comment "K8S access to DNS server" -j ACCEPT
-A kvmpri_to_lan -d 10.5.0.200/32 -p tcp -m tcp --dport 10051 -m comment --comment "zabbix active checks from kvmpri to zabbix" -j ACCEPT
-A kvmpri_to_lan -d 10.5.0.0/24 -p tcp -m tcp --dport 10050 -m comment --comment "deveops zabbix to lan" -j ACCEPT
-A kvmpri_to_lan -p icmp -m comment --comment "icmp to everywhere" -j ACCEPT
-A kvmpri_to_lan -s 10.8.0.0/24 -d 10.5.0.0/24 -j vpn_to_lan
-A kvmpri_to_lan -s 10.5.0.0/24 -d 10.8.0.0/24 -j vpn_to_lan
-A kvmpri_to_lan -j LOGGING
-A kvmpub_to_lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A kvmpub_to_lan -d 10.5.0.200/32 -p udp -m udp --dport 53 -m comment --comment "K8S access to DNS server" -j ACCEPT
-A kvmpub_to_lan -j LOGGING
-A lan_to_internet -j ACCEPT
-A lan_to_internet -j LOGGING
-A lan_to_k8s -j LOGGING
-A lan_to_kvmpri -m state --state RELATED,ESTABLISHED -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.143/32 -d 192.168.130.0/24 -p tcp -m tcp --dport 22 -m comment --comment "ssh to kvmpri for snow" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.145/32 -d 192.168.130.0/24 -p tcp -m tcp --dport 22 -m comment --comment "ssh to kvmpri for vogel" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.143/32 -d 192.168.130.20/32 -p tcp -m tcp --dport 3306 -m comment --comment "mysql to nextcloud for snow" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.143/32 -d 192.168.130.22/32 -p tcp -m tcp --dport 3306 -m comment --comment "mysql to zabbix for snow" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.0/24 -d 192.168.130.20/32 -p tcp -m multiport --dports 80,443 -m comment --comment "http/s to owncloud for lan" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.0/24 -d 192.168.130.22/32 -p tcp -m multiport --dports 80,443 -m comment --comment "http/s to zabbix for lan" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.200/32 -d 192.168.130.0/24 -p tcp -m tcp --dport 10050 -m comment --comment "zabbix access to kvmpri" -j ACCEPT
-A lan_to_kvmpri -d 192.168.130.22/32 -p udp -m udp --dport 53 -m comment --comment "lan to DNS server" -j ACCEPT
-A lan_to_kvmpri -d 192.168.130.23/32 -p tcp -m multiport --dports 80,443 -m comment --comment "lan to uyuni web interface" -j ACCEPT
-A lan_to_kvmpri -s 10.5.0.143/32 -d 192.168.130.30/32 -p tcp -m tcp -m multiport --dports 80,443 -m comment --comment "http/s uyini from snow" -j ACCEPT
-A lan_to_kvmpri -j LOGGING
-A lan_to_kvmpub -m state --state RELATED,ESTABLISHED -j ACCEPT
-A lan_to_kvmpub -j LOGGING
-A lan_to_vms -m state --state RELATED,ESTABLISHED -j ACCEPT
-A lan_to_vms -s 10.5.0.0/24 -d 192.168.60.0/24 -m comment --comment "snow full access to vms network" -j ACCEPT
-A lan_to_vms -s 10.5.0.0/24 -d 192.168.60.0/24 -m comment --comment "morty full access to vms network" -j ACCEPT
-A lan_to_vms -j lan_to_k8s
-A lan_to_vms -j LOGGING
-A vms_to_internet -m state --state RELATED,ESTABLISHED -j ACCEPT
-A vms_to_internet -s 192.168.60.0/24 -p tcp -m multiport --dports 80,443 -m comment --comment "internet access to VMs" -j ACCEPT
-A vms_to_internet -s 192.168.60.0/24 -p icmp -m comment --comment "ICMP to the world" -j ACCEPT
-A vms_to_internet -j LOGGING
-A vms_to_lan -d 10.5.0.200/32 -p tcp -m tcp --dport 10051 -m comment --comment "VMs to active checks" -j ACCEPT
-A vms_to_lan -d 10.5.0.200/32 -p udp -m udp --dport 53 -m comment --comment "VMs access to DNS server" -j ACCEPT
-A vms_to_lan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A vms_to_lan -j LOGGING
-A vpn_to_lan -d 10.5.0.200/32 -p udp -m udp --dport 53 -m comment --comment "all vpn can access dns" -j ACCEPT
-A vpn_to_lan -s 10.8.0.6/32 -d 10.5.0.143/32 -p tcp -m tcp --dport 22 -m comment --comment "morty can access snow oven vpn" -j ACCEPT
-A vpn_to_lan -s 10.5.0.0/24 -d 10.8.0.0/24 -m comment --comment "back from lan to vpn" -j ACCEPT
-A vpn_to_lan -j LOGGING
COMMIT
# Completed on Thu Dec 24 13:33:09 2020
